<resources>
    <string name="app_name">Boa Viagem</string>

    <string name="login_usuario">Usuário:</string>
    <string name="login_senha">Senha:</string>
    <string name="login_acessar">Acessar</string>
    <string name="action_settings">Configurações</string>
    <string name="novo_gasto">Novo Gasto</string>
    <string name="nova_viagem">Nova Viagem</string>
    <string name="minhas_viagens">Minhas Viagens</string>
    <string name="configuracoes">Configurações</string>
</resources>
