<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#333333">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_name"
        android:id="@+id/textView4"
        android:layout_gravity="center" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#015488"
        android:layout_gravity="center_horizontal">


        <TextView
            android:id="@+id/novo_gasto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="80dp"
            android:clickable="true"
            android:drawableTop="@drawable/novo_gasto"
            android:text="@string/novo_gasto"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:onClick="selecionarOpcao"/>

        <TextView
            android:id="@+id/nova_viagem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/novo_gasto"
            android:layout_marginRight="50dp"
            android:clickable="true"
            android:drawableTop="@drawable/nova_viagem"
            android:text="@string/nova_viagem"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:onClick="selecionarOpcao"/>

        <TextView
            android:id="@+id/minhas_viagens"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignLeft="@+id/novo_gasto"
            android:layout_alignStart="@+id/novo_gasto"
            android:layout_marginBottom="80dp"
            android:drawableTop="@drawable/minhas_viagens"
            android:clickable="true"
            android:text="@string/minhas_viagens"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:onClick="selecionarOpcao"/>

        <TextView
            android:id="@+id/configuracoes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/nova_viagem"
            android:layout_alignBottom="@+id/minhas_viagens"
            android:clickable="true"
            android:drawableTop="@drawable/configuracoes"
            android:text="@string/configuracoes"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:onClick="selecionarOpcao"/>


    </RelativeLayout>


</LinearLayout>